fixed spacing on index page

--- a/index.css
+++ b/index.css
@@ -220,7 +220,7 @@ footer a:hover {
         width: 100%;
         align-self: center;
         font-size: calc(15px + 0.5vw);
-        padding: 5vh;
+        padding: 5vh 0;
     }
 }
 
